Fixed ugly wrapping with long information in models
Former-commit-id: 9af8c84e25d1d580a0ba0f64740445a86f3fd7a9

--- a/public/stylesheets/sass/nlcommons.scss
+++ b/public/stylesheets/sass/nlcommons.scss
@@ -273,8 +273,19 @@ body {
 /* 
  * Model Page
  */
+
+#preview_info_container {
+  width: 960px;
+  height: 160px;
+  display:table-row;
+  float: left;
+  &>div {
+    display: table-cell;
+    height: 160px;
+    vertical-align: top;
+  }
+}
 #model_preview {
-  @include column(4);
   #preview-image {
     width: 152px;
     height: 152px;
@@ -285,22 +296,22 @@ body {
     display: inline-block;
     background-color: hsl(0%, 0%, 85%);
   }
-  
-  height: 160px;
 }
 #model_info {
-  @include column(20, true);
-  height: 160px;
   img {
     vertical-align: middle;
   }
   img.inline_image {
     height: 20px;
   } 
-  div {
-    height: 49px;
-    line-height: 49px;
-    @include global_padding;
+  &>div {
+    height: 53px;
+    display: table-row;
+    &>div {
+      display: table-cell;
+      vertical-align: middle;
+      
+    }
   }
 }
 
